[gd_scene load_steps=8 format=3 uid="uid://bh2agcymvfwho"]

[ext_resource type="Script" path="res://scenes/animations/combat/fx/skill/fx_skill_name.gd" id="1_n6bda"]
[ext_resource type="Texture2D" uid="uid://dwo36gm753vtf" path="res://sprites/fx/skill/skill bar.png" id="2_vc2ss"]
[ext_resource type="Theme" uid="uid://du12ka2217r4x" path="res://fonts/Izayoi_Theme.tres" id="3_toyee"]
[ext_resource type="Texture2D" uid="uid://d2nckvmnnxanh" path="res://sprites/fx/gen/passive_icon.png" id="3_ucuhv"]

[sub_resource type="Animation" id="Animation_hufmj"]
resource_name = "Action"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(60, 61), Vector2(60, -47), Vector2(60, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_prkun"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c47h8"]
_data = {
"Action": SubResource("Animation_hufmj"),
"RESET": SubResource("Animation_prkun")
}

[node name="fx_skill_name" type="Control"]
modulate = Color(1, 1, 1, 0)
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 61.0
offset_right = 60.0
offset_bottom = 61.0
size_flags_horizontal = 0
script = ExtResource("1_n6bda")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c47h8")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -26.0
offset_right = 66.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_vc2ss")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LeftCrest" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_ucuhv")
expand_mode = 1

[node name="SkillName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_toyee")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0.0470588, 0.00392157, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 45
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightCrest" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_ucuhv")
expand_mode = 1
